[package]
name = "{{ crate_name }}"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[dependencies]
# Replace this with `bevy = "0.13"` when compiling a release build.
bevy = { version = "0.13", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
